objects/sfcma__PaymentIntent__c.object
<CustomObject>
    <description>Contains information about a customer payment intent in stripe. For example, charge associated (if any), invoice generated (if any) and whether it was successful, cancelled or is incomplete.</description>
    <fields>
        <fullName>sfcma__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfcma__Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfcma__Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>sfcma__Invoice__c</referenceTo>
        <relationshipLabel>Payment Intents</relationshipLabel>
        <relationshipName>Payment_Intent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcma__PaymentErrorCode__c</fullName>
        <description>Short string indicating the stripe error code reported on last payment error if any encountered on payment intent confirmation.</description>
        <label>Payment Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__PaymentErrorMessage__c</fullName>
        <description>Text description for the last payment error.</description>
        <label>Payment Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__PaymentErrorType__c</fullName>
        <description>Type of error returned on last payment error if any is encountered on payment intent confirmation.</description>
        <label>Payment Error Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Payment_Error_Code__c</fullName>
        <description>Short string indicating the stripe error code reported on last payment error if any encountered on payment intent confirmation.</description>
        <label>Payment Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Payment_Error_Message__c</fullName>
        <description>Text description for the last payment error.</description>
        <label>Payment Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Payment_Error_Type__c</fullName>
        <description>Type of error returned on last payment error if any is encountered on payment intent confirmation.</description>
        <label>Payment Error Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfcma__StripePaymentIntentId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Payment Intent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__StripePaymentMethod__c</fullName>
        <label>Stripe Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcma__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>sfcma__Transaction__c</referenceTo>
        <relationshipLabel>Payment Intents</relationshipLabel>
        <relationshipName>Payment_Intent</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checkout Payment Intent</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Checkout Payment Intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Payment Intents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>